# crypto-hacks

./: README.md
birthday-paradox/: Cargo.toml
birthday-paradox/src/: main.rs
cbc-padding-oracle/: Cargo.toml
cbc-padding-oracle/src/: main.rs
des-sac/: des-sac.py
ed25519-dalek-secret-recovery/: Cargo.toml
ed25519-dalek-secret-recovery/src/: main.rs
group-op-timing-attack/: Cargo.toml
group-op-timing-attack/extra/: timing-attack.py
group-op-timing-attack/src/: main.rs
miller-rabin/: Cargo.toml
miller-rabin/src/: lib.rs
rsa-fails/: common-modulus.py  crt-sign-fault-injection.py
shanks-algorithm/: Cargo.toml
shanks-algorithm/src/: lib.rs
