[package]
name = "group-op-timing-attack"
authors = "Davide Galassi <davxy@datawok.net>"
version = "0.1.0"
edition = "2021"
description = "Timing attack carried over non constant time group operation implementation"

[dependencies]
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
