[package]
name = "miller-rabin"
authors = ["Davide Galassi <davxy@datawok.net>"]
version = "0.1.0"
edition = "2021"
description = "A Rust library for generating large primes"
license = "MIT"

[dependencies]
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.6.1"
